--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -64,7 +64,7 @@
 <!-- nav -->
 <nav class="navbar navbar-expand-lg bg-dark fixed-top">
     <div class="container-fluid container">
-      <a class="navbar-brand h1 mt-1 text-light" routerLink="/">Three Service</a>
+      <a class="navbar-brand h1 mt-1 text-light" routerLink="/">QueQue</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
