--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -62,19 +62,20 @@
     </symbol>
 </svg>
 <!-- nav -->
-<nav class="navbar navbar-expand-lg bg-dark fixed-top">
-    <div class="container-fluid container">
-      <a class="navbar-brand h1 mt-1 text-light" routerLink="/">QueQue</a>
+<nav class="navbar navbar-expand-lg bg-white fixed-top">
+    <div class="container-fluid container d-flex align-items-center">
+      <img src="../../../assets/img/logo.png" alt="logo" class="me-3" style="max-width: 50px; height: auto;">
+      <a class="navbar-brand h1 mt-1 text-dark" routerLink="/">QueQue</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" routerLink="#features">Features</a>
+            <a class="nav-link active text-dark" aria-current="page" routerLink="#features">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" routerLink="#prices">Prices</a>
+            <a class="nav-link active text-dark" aria-current="page" routerLink="#prices">Prices</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" routerLink="#contact">Contact</a>
+            <a class="nav-link active text-dark" aria-current="page" routerLink="#contact">Contact</a>
           </li>
         </ul>
         <form class="d-flex">
